[package]
name = "d2d1test-rs"
version = "0.1.0"
license = "MIT"
authors = [
    "Connor Hilarides <connorcpu@live.com>",
    "Raph Levien <raph@google.com>"
]
description = "Test program exercising Rust bindings for Direct2D and DirectWrite."

[dependencies]
winapi = "0.2"
uuid = "0.1"
kernel32-sys = "0.2"
user32-sys = "0.1"
gdi32-sys = "0.2"

directwrite = "0.0.5"
direct2d = "0.0.5"

libloading = "0.3"

[build-dependencies]
winapi-build = "0.1.1"
