[package]
name = "d2d1test-rs"
version = "0.1.0"
license = "MIT"
authors = [
    "Connor Hilarides <connorcpu@live.com>",
    "Raph Levien <raph@google.com>"
]
description = "Test program exercising Rust bindings for Direct2D and DirectWrite."

[dependencies]
directwrite = "0.0.7"
direct2d = "0.0.7"

libloading = "0.3"

[dependencies.winapi]
git = "https://github.com/retep998/winapi-rs.git"
branch = "dev"
features = ["d2d1_1", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "winuser", "dxgi1_3", "d3d11", "shellscalingapi", "dcomp"]

[build-dependencies]
winapi-build = "0.1"

[patch.crates-io.directwrite]
git = "https://github.com/Connicpu/directwrite-rs.git"

[patch.crates-io.direct2d]
git = "https://github.com/Connicpu/direct2d-rs.git"
