[package]
name = "d2d1test-rs"
version = "0.1.1"
license = "MIT"
authors = [
    "Connor Hilarides <connorcpu@live.com>",
    "Raph Levien <raph@google.com>"
]
description = "Test program exercising Rust bindings for Direct2D and DirectWrite."

[dependencies]
directwrite = "0.0.9"
direct2d = "0.0.9"

libloading = "0.3"

[dependencies.winapi]
version = "0.3"
features = ["d2d1_1", "dwrite", "winbase", "libloaderapi", "errhandlingapi", "winuser", "shellscalingapi"]

[build-dependencies]
winapi-build = "0.1.1"
